--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+psycopg2==2.7.6.1
 pyTelegramBotAPI==3.6.6
 requests==2.20.1
 six==1.11.0
